--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "@discordjs/rest": "^2.0.0",
     "@nestjs/axios": "0.0.7",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/common": "^10",
+    "@nestjs/core": "^10",
+    "@nestjs/platform-express": "^10",
+    "@nestjs/serve-static": "^4.0.0",
+    "alchemy-sdk": "^2.10.0",
     "axios": "^0.26.1",
     "better-sqlite3": "^8.5.0",
     "canvas": "^2.11.2",
@@ -38,9 +40,11 @@
     "discord.js": "^13",
     "dotenv": "^16.0.0",
     "ethers": "^6.7.0",
+    "express": "^4.18.2",
     "jest-coverage-badges": "^1.1.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "needle": "^3.2.0",
     "readline-sync": "^1.4.10",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -54,9 +58,9 @@
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
